backend/k8s/workload/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    nginx.client_max_body_size: 10m
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 20.166.32.72.nip.io
      secretName: app-tls-cert
  rules:
    - host: 20.166.32.72.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /streaming-platform
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: fsa-keycloak-http
                port:
                  number: 80
