backend/k8s/workload/ingress/gitlab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: infra
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
#  tls:
#    - hosts:
#        - gitlab.fullstackacademy.sk
#      secretName: gitlab-tls-cert
  rules:
    - host: gitlab.fullstackacademy.sk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fsa-gitlab
                port:
                  number: 80
